enable JUnitAssertionImprover for klite itself