@@ -71,6 +71,8 @@ subprojects {
 
   tasks.test {
     useJUnitPlatform()
+    // enable JUnitAssertionImprover from klite.jdbc-test
+    jvmArgs("-Djunit.jupiter.extensions.autodetection.enabled=true", "--add-opens=java.base/java.lang=ALL-UNNAMED")
   }
 
   // disable publishing gradle .modules files as JitPack omits excludes from there: https://github.com/jitpack/jitpack.io/issues/5349
